test/neg/neg-serial6.errc
All arguments to UPCXX_SERIALIZED_FIELDS must be Serializable
